welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:11: error: ';' expected but ')' found.
	if ( (day!=0) && (day!=6)) && (vacation)) {
                                                ^